Set up GIPHY API call for trending gifs and added to .trending-gif-list on load

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <section class="trending">
         <h1 class="section-title trending-title">Trending GIFs</h1>
         <p class="see-all">See All ></p>
-        <div class="trending-gifs"></div>
+        <div class="trending-gifs">
+          <ul class="trending-gifs-list"></ul>
+        </div>
       </section>
       <section class="videos">
         <h1 class="section-title videos-title">GIPHY Videos</h1>
@@ -40,6 +42,7 @@
     </div>
 
     <!-- JS -->
+    <script src="js/config.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
