Added 'Load More' button functionality and search when enter button is pressed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="" />
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       <h1>GIPHY</h1>
       <ul>
         <li>Reactions</li>
@@ -31,7 +31,7 @@
     <input
       type="text"
       id="gif-search"
-      class="gif-search"
+      class="gif-search-input"
       placeholder="Search All GIFs and Stickers"
     />
     <button class="gif-search-button">Search</button>
@@ -42,6 +42,7 @@
           <ul class="gifs-list"></ul>
         </div>
       </section>
+      <button class="load-more-button">Load More</button>
       <!-- <section class="videos">
         <h1 class="section-title videos-title">GIPHY Videos</h1>
         <p class="see all">See All Videos ></p>
