Added a normalize.css and a small css reset file

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
 
     <title>GIPHY Clone</title>
 
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/reset.local.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="shortcut icon" href="" />
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="nav-bar">
       <h1>GIPHY</h1>
-      <ul>
-        <li>Reactions</li>
-        <li>Entertainment</li>
-        <li>Sports</li>
-        <li>Stickers</li>
-        <li>Artists</li>
-        <li>...</li>
+      <ul class="nav-categories-ul">
+        <li class="nav-categories-li">Reactions</li>
+        <li class="nav-categories-li">Entertainment</li>
+        <li class="nav-categories-li">Sports</li>
+        <li class="nav-categories-li">Stickers</li>
+        <li class="nav-categories-li">Artists</li>
+        <li class="nav-categories-li">...</li>
       </ul>
       <div class="nav-btns">
         <button>Upload</button>
