Added category links with some basic styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li class="nav-categories-li">...</li>
       </ul>
       <button>
-        Created by: <a href="https://www.ryanfuhrman.me">Ryan Fuhrman</a>
+        Built by: <a href="https://www.ryanfuhrman.me">Ryan Fuhrman</a>
       </button>
     </nav>
     <div class="search-bar">
@@ -48,6 +48,12 @@
         </div>
       </section>
       <button class="load-more-button">Load More</button>
+      <section class="categories">
+        <h1 class="section-title categories">Categories</h1>
+        <div class="categories-container">
+          <ul class="categories-list"></ul>
+        </div>
+      </section>
     </div>
 
     <!-- JS -->
