Added Categories feature

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
       <h1 class="nav-bar-logo">RIPHY</h1>
       <ul class="nav-categories-ul">
         <li class="trending-button nav-categories-li">Trending</li>
-        <li class="nav-categories-li">Entertainment</li>
-        <li class="nav-categories-li">Sports</li>
-        <li class="nav-categories-li">Stickers</li>
-        <li class="nav-categories-li">Artists</li>
-        <li class="nav-categories-li">...</li>
+        <li class="entertainnment-button nav-categories-li">Entertainment</li>
+        <li class="sports-button nav-categories-li">Sports</li>
+        <li class="animals-button nav-categories-li">Animals</li>
+        <li class="categories-button nav-categories-li">Categories</li>
       </ul>
       <button>
         Built by: <a href="https://www.ryanfuhrman.me">Ryan Fuhrman</a>
@@ -48,12 +47,12 @@
         </div>
       </section>
       <button class="load-more-button">Load More</button>
-      <section class="categories">
+      <!-- <section class="categories">
         <h1 class="section-title categories">Categories</h1>
         <div class="categories-container">
           <ul class="categories-list"></ul>
         </div>
-      </section>
+      </section> -->
     </div>
 
     <!-- JS -->
