--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
       <h1 class="nav-bar-logo">RIPHY</h1>
       <ul class="nav-categories-ul">
         <li class="trending-button nav-categories-li">Trending</li>
-        <li class="entertainnment-button nav-categories-li">Entertainment</li>
-        <li class="sports-button nav-categories-li">Sports</li>
-        <li class="animals-button nav-categories-li">Animals</li>
+        <li
+          class="entertainnment-button nav-category-buttons nav-categories-li"
+        >
+          Entertainment
+        </li>
+        <li class="sports-button nav-category-buttons nav-categories-li">
+          Sports
+        </li>
+        <li class="animals-button nav-category-buttons nav-categories-li">
+          Animals
+        </li>
         <li class="categories-button nav-categories-li">Categories</li>
       </ul>
       <button>
-        Built by: <a href="https://www.ryanfuhrman.me">Ryan Fuhrman</a>
+        <a href="https://www.ryanfuhrman.me">Built by: Ryan Fuhrman</a>
       </button>
     </nav>
     <div class="main">
@@ -46,14 +54,11 @@
         <div class="gifs-container">
           <ul class="gifs-list"></ul>
         </div>
-      </section>
-      <button class="load-more-button">Load More</button>
-      <!-- <section class="categories">
-        <h1 class="section-title categories">Categories</h1>
         <div class="categories-container">
           <ul class="categories-list"></ul>
         </div>
-      </section> -->
+      </section>
+      <button class="load-more-button">Load More</button>
     </div>
 
     <!-- JS -->
