Replaced search-button text from search to an svg icon

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
           class="search-bar-input"
           placeholder="Search All GIFs and Stickers"
         />
-        <button class="search-bar-button">Search</button>
+        <button class="search-bar-button">
+          <img src="./img/search.svg" class="search-icon" />
+        </button>
       </div>
 
       <section class="gifs">
